--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,82 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
+    <title>
+        <%= htmlWebpackPlugin.options.title %>
+    </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <style>
+        .color-box {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            margin: 7px;
+            display: inline-block;
+        }
+
+        .clic {
+            cursor: pointer;
+        }
+
+        .quantity button {
+            border-radius: 50%;
+            display: inline-block;
+            width: 30px;
+        }
+
+        .quantity div {
+            text-align: center;
+            min-width: 30px;
+            display: inline-block;
+            font-weight: bold;
+        }
+
+        .buy-box {
+            margin: 20px;
+        }
+
+        footer {
+
+            text-align: center;
+            padding: 30px 10px;
+            margin-top: 50px;
+            min-height: 100px;
+        }
+
+        .container {
+            margin-top: 50px;
+            text-align: left;
+        }
+
+        .producto-relacionado-precio {
+            background: orangered;
+            color: white;
+            text-align: center;
+            padding: 10px;
+        }
+
+    </style>
+</head>
+
+<body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+        <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+                Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+</body>
+</body>
+
 </html>
