--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,25 @@
             padding: 10px;
         }
 
+        .navbar {
+            position: fixed;
+            width: 100%;
+            top: 0px;
+            z-index: 1000;
+            margin-bottom: 10px;
+            box-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
+        }
+
+        .carousel {
+            position: relative;
+            top: -50px;
+        }
+
+        a {
+            text-decoration: none;
+            color: black;
+        }
+
     </style>
 </head>
 
